// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLink Should display a symbol to the right 1`] = `
<glamorous.Div>
  sup
  <div
    className="symbol"
  >
    % s  
  </div>
</glamorous.Div>
`

exports[`SidebarLink Should render a react-router link if given a \`to\` prop 1`] = `
<Link
  replace={false}
  to="/route"
>
  sup
</Link>
`

exports[`SidebarLink Should render correctly 1`] = `
<glamorous.Div>
  sup
</glamorous.Div>
`
